@@ -38,6 +38,13 @@
   display: inline-block;
   text-decoration: inherit;
 }
+
+/* fix bootstrap 2.x */
+[class^="icon-"], [class*=" icon-"] {
+vertical-align: middle;
+background-image:none;
+}
+
 a [class^="icon-"], a [class*=" icon-"] {
   display: inline-block;
   text-decoration: inherit;
